fixing screen dimensions as per device

--- a/OSDMDashboard/src/app/heat-map/heat-map.component.html
+++ b/OSDMDashboard/src/app/heat-map/heat-map.component.html
@@ -1,4 +1,4 @@
 <div id="my_dataviz"></div>
-<div class="d3class">
-    <svg></svg>
+<div id="uniqueId" class="d3class">
+    <svg id="mydiv"></svg>
 </div>
