--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
@@ -103,7 +103,7 @@
                             display: inline-block;">
                                 <button style="margin-left: 0;
                                 margin-right:0; 
-                                padding: 15% 5%;" class="obsolClass" (click)="isClicked8 = !isClicked8" [class.myClass]="isClicked8" mdbBtn type="button" color="light" rounded="true" mdbWavesEffect>Obsolete Qty</button>
+                                padding: 15% 5%;" class="obsolClass" (click)="isClicked8 = !isClicked8;isClicked9 = !isClicked9;" [class.myClass]="isClicked8" mdbBtn type="button" color="light" rounded="true" mdbWavesEffect>Obsolete Qty</button>
                             </div>
                             <div style="width: 47%;
                             float: right;
@@ -112,7 +112,7 @@
                             display: inline-block;">
                                 <button style="margin-left: 0;
                                 margin-right:0; 
-                                padding: 8% 5%;" class="obsolClass" (click)="isClicked9 = !isClicked9" [class.myClass]="isClicked9" mdbBtn type="button" color="light" rounded="true" mdbWavesEffect>Obsolete value</button>
+                                padding: 8% 5%;" class="obsolClass" (click)="isClicked9 = !isClicked9; isClicked8 = !isClicked8" [class.myClass]="isClicked9" mdbBtn type="button" color="light" rounded="true" mdbWavesEffect>Obsolete value</button>
                             </div>
                         </div>
                     </div>
