Changing the Header Name.

--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.css
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.css
@@ -23,9 +23,7 @@
     margin: 0 auto;
 }
 .scctText{
-    display: inline-block;
-    position: relative;
-    left: 25%; 
+    text-align: center;
 }
 .myclass {
     color: black;
