--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <div class="scct">
     <div id="nav">
-        <h3 class="scctText">SCCT Inventory</h3>
+        <h3 class="scctText">Control Tower</h3>
     </div>
     <div id="menu">
         <br>
