--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.css
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.css
@@ -73,10 +73,10 @@ mat-form-field{
     font-weight: 700;
 }
 .excessValue{
-    margin-top: 69%;
+    margin-top: 97%;
 }
 .days{
-    padding: 17% 16%;;
+    padding: 10%;;
     font-size: 10px;
     font-weight: 700;
 }
