Adding Title to the Graph as a header.

--- a/OSDMDashboard/src/app/heat-map/heat-map.component.html
+++ b/OSDMDashboard/src/app/heat-map/heat-map.component.html
@@ -1,4 +1,16 @@
 <div id="my_dataviz"></div>
 <div class="d3class">
+    <div id="svgTitle" style="display: inline-block;
+    text-align: left;
+    font-size: 1.75rem;
+    font-family: helivertica arial;
+    font-weight: 600;
+    padding-left: 5px;" *ngIf="message!=''">{{svgTitle2}}</div>
+     <div id="svgTitle" style="display: inline-block;
+     text-align: left;
+     font-size: 1.75rem;
+     font-family: helivertica arial;
+     font-weight: 600;
+     padding-left: 5px;" *ngIf="message">{{svgTitle}}</div>
     <svg id="mydiv"></svg>
 </div>
