--- a/OSDMDashboard/src/app/heat-map/heat-map.component.html
+++ b/OSDMDashboard/src/app/heat-map/heat-map.component.html
@@ -15,7 +15,13 @@
      padding-left: 5px;" *ngIf="message">{{svgTitle}}</div>
     <svg id="mydiv"></svg>
 </div>
-<div *ngIf="noRecordsFound"><h1>No Records found</h1></div>
+<div *ngIf="noRecordsFound" class="noRecords">
+    <br>
+    <br>
+    <br>
+    <img src="../../assets/dilema.png" alt="img not found">
+    <h2 >No Records found</h2>
+</div>
 <!-- <span style='font-size:100px;'>&#128542;</span>
 <font face="Segoe UI Symbol">&#x1f604;</font><br><br>
 <font face="Arial">&#x1f604;</font> -->
