updated routing for landing page and heatMap page

--- a/OSDMDashboard/src/app/app.component.html
+++ b/OSDMDashboard/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav-menu></app-nav-menu>
+<div id="nav">
+    <h3 class="scctText">Supply Chain Control Tower</h3>
+</div>
 
 <router-outlet></router-outlet>
