--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
@@ -192,8 +192,9 @@
                 </div>
                 </div>
             </div> -->
-            <div *ngIf="homeBoolean; else loggedOut">
-                <app-home></app-home>
+            <a [routerLink]="['']" style = "text-decoration:underline;">Back to Landing page</a>
+            <div class="heatmapcls" *ngIf="newArray; else loggedOut">
+                <app-heat-map [message]="newArray">loading please wait</app-heat-map>
             </div>
             <ng-template class="heatmapcls" #loggedOut>
                 <app-heat-map [message]="newArray">loading please wait</app-heat-map>
