--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
@@ -192,7 +192,7 @@
                 </div>
                 </div>
             </div> -->
-            <a [routerLink]="['']" style = "text-decoration:underline;">Back to Landing page</a>
+            <a [routerLink]="['']" style = "text-decoration:underline;float:right;"> < Back to Landing page</a>
             <div class="heatmapcls" *ngIf="newArray; else loggedOut">
                 <app-heat-map [message]="newArray">loading please wait</app-heat-map>
             </div>
