Back to landing page moved to the extent right.

--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.css
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.css
@@ -67,7 +67,9 @@ mat-form-field{
 .borderless{
     border: none;
 }
-
+.heatmapcls{
+    margin-top: 2%;
+}
 .excessbutton{
     line-height: normal;
 }
