added nav seperately

--- a/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
+++ b/OSDMDashboard/src/app/nav-menu/nav-menu.component.html
@@ -1,3 +1,6 @@
+<div id="nav">
+    <h3 class="scctText">Supply Chain Control Tower</h3>
+</div>
 <div class="scct">
     <div id="nav">
         <h3 class="scctText">Supply Chain Control Tower</h3>
