--- a/OSDMDashboard/src/app/home/home.component.html
+++ b/OSDMDashboard/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="nav">
-    <h3 class="scctText">Control Tower</h3>
+    <h3 class="scctText">Supply Chain Dashboard </h3>
 </div>
 <br>
 <br>
@@ -28,5 +28,5 @@
         </div>
     </div>
 
-  <a [routerLink]="['heatmapNav']" class="heatmapLink">Heatmap</a>
+  <a [routerLink]="['heatmapNav']" class="heatmapLink">Navigate to detailed view</a>
 </div>
